--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <div class="ms-5 my-5 d-none d-md-block d-sm-block ">
                     <button type="button" class="btn btn-success">Next</button>
                 </div>
-                <div class="ms-5 my-5 d-block d-md-none d-sm-none d-grid w-100 "></div>
-                    <button class="btn btn-primary w-100" type="button">Next</button>
+                <div class="ms-5 my-5 d-block d-md-none d-sm-none d-xxlg-none d-grid w-100 ">
+                    <button class="btn btn-success w-100" type="button">Next</button>
                 </div>
             </div>
 
